Improve data generation and documentation
- Add directory creation to both R and Python data generators
- Fix gene symbol consistency (TGFb1 → TGFB1)
- Add CLAUDE.md with comprehensive project documentation
- Update README with uv/Python instructions
- Remove generated data files from git tracking
- Update .gitignore to exclude CSV data and .claude/ directory

--- a/proteomics-shiny-demo/.gitignore
+++ b/proteomics-shiny-demo/.gitignore
@@ -9,6 +9,7 @@ rsconnect/
 
 # Data (regenerate with generate_data.py or R/generate_data.R)
 data/*.rds
+data/*.csv
 
 # Python
 __pycache__/
@@ -19,6 +20,7 @@ venv/
 # IDE
 .idea/
 .vscode/
+.claude/
 
 # OS
 .DS_Store
